traefikv2/extraconfig/dashboard-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard
  annotations:
    kubernetes.io/ingress.class: "traefik-cert-manager"
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: traefik.adcdigital.in
      http:
        paths:
          - path: /dashboard
            backend:
              serviceName: traefik
              servicePort: 80
